--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ body {
 		margin: 12px 0 12px 42px;
 		border-top: 1px solid #e8e8e8;
 	}
-		.stats, .stats div {
+		.stats, .stats div, .timeFormat {
 			box-sizing: border-box;
 		}
 		.num-retweets, .num-favorites {
@@ -240,7 +240,7 @@ body {
 			width: 32px; height: 32px;
 		}
 
-		.time {
+		.timeFormat {
 			clear: both;
 			font-size: 12px;
 			color: #999;
@@ -258,5 +258,3 @@ body {
 				top: 0;
 				left: 0;
 			}
-
-
